RESOLVED FIXED118776
Only the first call to 'stop' method of AudioBufferSourceNode must be entertained.
https://bugs.webkit.org/show_bug.cgi?id=118776
Summary Only the first call to 'stop' method of AudioBufferSourceNode must be enterta...
Praveen Jadhav
Reported 2013-07-16 21:37:51 PDT
'stop' method should be called only once for an AudioBufferSourceNode (and OscillatorNode). Any further call to 'stop' method for the same source must throw an exception. In the current implementation, further calls to 'stop' method before the node goes to FINISHED_STATE updates the end time of the node which is not as expected.
Attachments
Patch (3.61 KB, patch)
2013-07-16 21:54 PDT, Praveen Jadhav
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (556.09 KB, application/zip)
2013-07-17 00:36 PDT, Build Bot
no flags
Patch (3.61 KB, patch)
2013-07-18 01:47 PDT, Praveen Jadhav
no flags
Praveen Jadhav
Comment 1 2013-07-16 21:54:36 PDT
Build Bot
Comment 2 2013-07-17 00:36:45 PDT
Comment on attachment 206852 [details] Patch Attachment 206852 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1102110 New failing tests: fullscreen/full-screen-iframe-with-max-width-height.html
Build Bot
Comment 3 2013-07-17 00:36:46 PDT
Created attachment 206863 [details] Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Praveen Jadhav
Comment 4 2013-07-18 01:47:46 PDT
WebKit Commit Bot
Comment 5 2013-07-18 08:38:06 PDT
Comment on attachment 206968 [details] Patch Clearing flags on attachment: 206968 Committed r152846: <http://trac.webkit.org/changeset/152846>
WebKit Commit Bot
Comment 6 2013-07-18 08:38:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.