Only the first call to 'stop' method of AudioBufferSourceNode must be entertained. https://bugs.webkit.org/show_bug.cgi?id=118776

Patch by Praveen R Jadhav <praveen.j@samsung.com> on 2013-07-18
Reviewed by Jer Noble.

Source/WebCore:

Subsequent calls to 'stop' for a AudioSourceBufferNode throws an exception.
End time set by first 'stop' method is used for processing.

No new tests. audiobuffersource-exception.html is updated.

* Modules/webaudio/AudioScheduledSourceNode.cpp:
(WebCore::AudioScheduledSourceNode::stop):

LayoutTests:

Test case updated to check subsequent calls to 'stop' for a given AudioBufferSourceNode.

* webaudio/audiobuffersource-exception-expected.txt:
* webaudio/audiobuffersource-exception.html:

Canonical link: https://commits.webkit.org/136714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152846 268f45cc-cd09-0410-ab3c-d52691b4dbfc